--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>古诗</title>
+    <style type="index/css">
+        body{
+            background-image: url(磁盘.jpg);
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html{
+            height:100%;
+        }
+
 </head>
 <body>
-<img src="磁盘.jpg"/>
 <h1>静夜思</h1>
 <p>窗前明月光，</p>
 <p>疑是地上霜。</p>
